@@ -19,6 +19,7 @@
 - Added ~Data.Radical~ for types that support computing square roots.
 - Added ~Data.Foldable.Sort~ which has a faster sort implementation
   (that will take any Foldable and return an Vector.)
+- Added ~Data.Cyclic~ and ~Data.Vector.NonEmpty~ modules
 
 ** 0.14
 
